--- a/Kconfig
+++ b/Kconfig
@@ -163,6 +163,7 @@ source "iperf/Kconfig"
 source "kexec-tools/Kconfig"
 source "make/Kconfig"
 source "mdadm/Kconfig"
+source "msr-tools/Kconfig"
 source "ntfs-3g/Kconfig"
 source "parted/Kconfig"
 source "rpcbind/Kconfig"
