--- a/Kconfig
+++ b/Kconfig
@@ -166,6 +166,7 @@ source "mdadm/Kconfig"
 source "msr-tools/Kconfig"
 source "ntfs-3g/Kconfig"
 source "parted/Kconfig"
+source "pciutils/Kconfig"
 source "rpcbind/Kconfig"
 source "strace/Kconfig"
 source "tcpdump/Kconfig"
