usbutils: add to configuration menu

--- a/Kconfig
+++ b/Kconfig
@@ -170,6 +170,7 @@ source "pciutils/Kconfig"
 source "rpcbind/Kconfig"
 source "strace/Kconfig"
 source "tcpdump/Kconfig"
+source "usbutils/Kconfig"
 source "valgrind/Kconfig"
 source "wireless-tools/Kconfig"
 source "wpa_supplicant/Kconfig"
@@ -185,6 +186,7 @@ source "libpcap/Kconfig"
 source "libtirpc/Kconfig"
 source "libtomcrypt/Kconfig"
 source "libtommath/Kconfig"
+source "libusb/Kconfig"
 source "ncurses/Kconfig"
 source "readline/Kconfig"
 source "util-linux/Kconfig"
