zlib-ng: use --32 option to handle the x86_32 case

--- a/zlib-ng/Makefile
+++ b/zlib-ng/Makefile
@@ -2,6 +2,9 @@ configure-args-y := \
 	--zlib-compat \
 	--prefix=/usr
 
+configure-args-$(MKR_ARCH_X86_32) += --32
+configure-args-$(MKR_ARCH_X86_64) += --64
+
 configure-env-y := \
 	CHOST="$(MKR_CONFIGURE_HOST)" \
 	CC="$(CC)" \
