--- a/Kconfig
+++ b/Kconfig
@@ -196,6 +196,7 @@ source "libtomcrypt/Kconfig"
 source "libtommath/Kconfig"
 source "libusb/Kconfig"
 source "ncurses/Kconfig"
+source "popt/Kconfig"
 source "readline/Kconfig"
 source "util-linux/Kconfig"
 source "xz/Kconfig"
