linux: add pseudo-package to install linux firmware

--- a/Kconfig
+++ b/Kconfig
@@ -148,6 +148,7 @@ source "base/Kconfig"
 source "busybox/Kconfig"
 source "dropbear/Kconfig"
 source "linux/Kconfig"
+source "linux-firmware/Kconfig"
 source "ltp-old/Kconfig"
 source "ltp/Kconfig"
 source "rtnet/Kconfig"
