--- a/dialog/Makefile
+++ b/dialog/Makefile
@@ -1,6 +1,11 @@
-configure-args-y += \
-	ac_cv_prog_NCURSES_CONFIG=$(staging)/usr/bin/ncurses5-config \
+configure-args-$(call not, $(MKR_DIALOG_WIDEC)) += \
+	ac_cv_prog_NCURSES_CONFIG=$(staging)/usr/bin/ncurses6-config \
 	--with-ncurses
+
+configure-args-$(MKR_DIALOG_WIDEC) += \
+	ac_cv_prog_NCURSES_CONFIG=$(staging)/usr/bin/ncursesw6-config \
+	--with-ncursesw \
+	--enable-widec
 
 rootfs-y := /usr/bin/dialog
 
