ncurses: do not compile a separated libtinfo
to stay compatible with bash

--- a/ncurses/Makefile
+++ b/ncurses/Makefile
@@ -4,7 +4,7 @@ configure-args-y += \
 	--without-manpages \
 	--without-ada \
 	--without-gpm \
-	--with-termlib \
+	--without-termlib \
 	--enable-termcap \
 	--enable-pc-files \
 	--enable-tcap-names \
