--- a/ncurses/Kconfig
+++ b/ncurses/Kconfig
@@ -14,6 +14,9 @@ config NCURSES_WIDEC
        depends on !READLINE
        bool "Enable wide characters support"
 
+config NCURSES_FULL_TERMINFO
+       bool "Install full terminfo database"
+
 endif
 
 endmenu
