openssh,libressl: add

--- a/Kconfig
+++ b/Kconfig
@@ -151,6 +151,7 @@ source "linux/Kconfig"
 source "linux-firmware/Kconfig"
 source "ltp-old/Kconfig"
 source "ltp/Kconfig"
+source "openssh/Kconfig"
 source "rtnet/Kconfig"
 source "tests/Kconfig"
 source "xenomai/Kconfig"
@@ -193,6 +194,7 @@ menu "Libraries"
 source "alsa-lib/Kconfig"
 source "fuse/Kconfig"
 source "libpcap/Kconfig"
+source "libressl/Kconfig"
 source "libtirpc/Kconfig"
 source "libtomcrypt/Kconfig"
 source "libtommath/Kconfig"
