--- a/readline/Makefile
+++ b/readline/Makefile
@@ -1,13 +1,14 @@
 configure-args-y += \
 	bash_cv_func_sigsetjmp=yes \
 	bash_cv_wcwidth_broken=no \
+	--libdir=/lib \
 	--disable-static \
 	--enable-multibyte \
 	--with-curses
 
 rootfs-y += \
-	/usr/lib/libhistory.so* \
-	/usr/lib/libreadline.so*
+	/lib/libhistory.so* \
+	/lib/libreadline.so*
 
 compile: default-autotools-compile
 
