iso-boot, grub-efi: do not mention the fact that these options are packages

--- a/grub-efi/Kconfig
+++ b/grub-efi/Kconfig
@@ -2,9 +2,8 @@ config GRUB_EFI
        package "EFI support for bootable ISO"
        build_depends on OUT_ISO_BOOT
        help
-	This pseudo-package generates the necessary contents to allow booting an
-        ISO image on a machine with EFI support. It requires the following tools
-       	to be installed:
+	Generates the necessary contents to allow booting an ISO image on a
+        machine with EFI support. It requires the following tools:
 	- mtools
 	- grub
 
