--- a/boards/live_initramfs_defconfig
+++ b/boards/live_initramfs_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Mon Mar 17 23:48:43 2014
+# Tue Jan  5 09:29:00 2016
 #
 
 #
@@ -8,6 +8,7 @@
 #
 MKR_TOOLCHAIN=y
 # MKR_ARCH_ARM is not set
+# MKR_ARCH_ARM64 is not set
 # MKR_ARCH_BFIN is not set
 # MKR_ARCH_NIOS2 is not set
 # MKR_ARCH_PPC32 is not set
@@ -18,13 +19,17 @@ MKR_ARCH_X86_64=y
 # MKR_ARCH_SH4 is not set
 MKR_ARCH=x86_64
 MKR_KARCH=x86
+MKR_ARCH32=i686
+MKR_HAVE_TOOLCHAIN32=y
 MKR_CONFIGURE_HOST=$(ARCH)-linux
 MKR_CC=gcc
 MKR_CXX=g++
-MKR_CFLAGS=$(ARCH_FLAGS) -g -Os -fomit-frame-pointer -march=atom
-MKR_LDFLAGS=$(ARCH_FLAGS) -g -Os -march=atom -fomit-frame-pointer
+MKR_CFLAGS=$(ARCH_FLAGS) -g -O2
+MKR_CXXFLAGS=$(ARCH_FLAGS) -g -O2
+MKR_LDFLAGS=$(ARCH_FLAGS) -g -O2
 MKR_SYSROOT_AUTO=y
 # MKR_SYSROOT_MANUAL is not set
+# MKR_TOOLCHAIN32 is not set
 
 #
 # Toolchain libraries selection
@@ -33,48 +38,31 @@ MKR_LIBDL=y
 MKR_LIBM=y
 MKR_LIBPTHREAD=y
 MKR_LIBRESOLV=y
-# MKR_LIBSTDCPP is not set
+MKR_LIBSTDCPP=y
 MKR_LIBUTIL=y
 
 #
-# Libraries
+# Output
 #
+# MKR_OUT_TAR is not set
+# MKR_OUT_NFS is not set
+MKR_OUT_INITRAMFS=y
+MKR_OUT_INITRAMFS_GZ=y
+# MKR_OUT_INITRAMFS_XZ is not set
+# MKR_OUT_INITRAMFS_UBOOT is not set
+# MKR_OUT_TFTP is not set
+# MKR_SKIP_ROOTFS is not set
+# MKR_SKIP_ROOTFS_MODULES_STRIP is not set
+MKR_OUT_ISO_BOOT=y
+MKR_OUT_ISO_BOOT_DIR=/usr/share/syslinux
+MKR_OUT_ISO_HYBRID=y
+MKR_GRUB_EFI=y
+MKR_GRUB_EFI_DIR=/usr/lib64/grub/x86_64-efi
 
 #
-# fuse
+# Base
 #
-MKR_FUSE=y
-MKR_FUSE_SRCDIR=fuse-*
-
-#
-# Libpcap
-#
-MKR_LIBPCAP=y
-MKR_LIBPCAP_SRCDIR=libpcap-*
-
-#
-# ncurses
-#
-MKR_NCURSES=y
-MKR_NCURSES_SRCDIR=ncurses-*
-
-#
-# Xz
-#
-MKR_XZ=y
-MKR_XZ_SRCDIR=xz-*
-# MKR_XZ_XZ is not set
-
-#
-# Zlib
-#
-MKR_ZLIB=y
-MKR_ZLIB_SRCDIR=zlib-*
-
-#
-# Base packages
-#
-MKR_SRC_BASEDIR=$(HOME)/src:/usr/src
+MKR_SRC_BASEDIR=$(HOME)/src:/usr/src:$(HOME)/files/xenomai
 
 #
 # Base skeleton
@@ -82,14 +70,28 @@ MKR_SRC_BASEDIR=$(HOME)/src:/usr/src
 MKR_BASE=y
 MKR_BASE_SRCDIR=$(srctree)/boards/$(MKR_BOARD)
 MKR_BOARD=generic
-MKR_SERIAL_STD=y
-# MKR_SERIAL_CUSTOM is not set
 MKR_KEYBOARD_MAPS=y
 # MKR_KEYBOARD_ONE_MAP is not set
 MKR_KEYBOARD_ALL_MAPS=y
 MKR_KEYBOARD_CHOOSER=y
-MKR_SWAP=y
-MKR_SWAP_DEV=sda1
+MKR_SECURE_NETWORK=y
+# MKR_BASE_SSH_DROPBEAR is not set
+MKR_BASE_SSH_OPENSSH=y
+# MKR_SWAP is not set
+MKR_SWAP_DEV=null
+MKR_BASE_SHELL=/bin/bash
+
+#
+# BusyBox
+#
+MKR_BUSYBOX=y
+MKR_BUSYBOX_SRCDIR=busybox-*
+MKR_BUSYBOX_CONFIG=live-initramfs/busybox_defconfig
+
+#
+# Dropbear
+#
+# MKR_DROPBEAR is not set
 
 #
 # Linux kernel
@@ -100,44 +102,84 @@ MKR_LINUX_SRCDIR=ipipe
 MKR_LINUX_CONFIG=live-initramfs/config-$(KERNELVERSION)
 MKR_LINUX_TARGETS=bzImage
 MKR_LINUX_IMAGE=arch/x86/boot/bzImage
-MKR_LINUX_IMAGE_DEST=/var/lib/tftpboot/bzImage-modular
+MKR_LINUX_NO_DT=y
+# MKR_LINUX_DT_MERGED is not set
+# MKR_LINUX_DT is not set
 MKR_LINUX_EXTRA_FILES=
 MKR_LINUX_EXTRA_INSTALL=
 
 #
-# BusyBox
+# Linux firmware
 #
-MKR_BUSYBOX=y
-MKR_BUSYBOX_SRCDIR=busybox-*
-MKR_BUSYBOX_CONFIG=defconfig
+MKR_LINUX_FW=y
+MKR_LINUX_FW_REPO=git://git.click-hack.org/kernel.org/linux-firmware.git
+# MKR_LINUX_FW_UPDATE is not set
+
+#
+# LTP (old versions)
+#
+# MKR_LTP_OLD is not set
+
+#
+# LTP (newer versions)
+#
+MKR_LTP_NEW=y
+MKR_LTP_NEW_SRCDIR=ltp-full-*
+
+#
+# OpenSSH
+#
+MKR_OPENSSH=y
+MKR_OPENSSH_SRCDIR=openssh-*
+
+#
+# RTnet
+#
+
+#
+# Real-time tests & benches
+#
+MKR_TESTS=y
+MKR_TESTS_SRCDIR=$(srctree)/tests
+MKR_TESTS_XENO=y
+MKR_XENO_TEST_FRONTEND=y
 
 #
 # Xenomai
 #
 MKR_XENO=y
-MKR_XENO_SRCDIR=xenomai-2.6
-# MKR_XENO_MAINT is not set
+MKR_XENO_SRCDIR=xenomai-gch
+MKR_XENO_MAINT=y
 MKR_XENO_SMP=y
 MKR_XENO_KERNEL=y
-MKR_XENO_CLASSIC=y
-# MKR_XENO_FORGE is not set
-MKR_XENO_DEBUG=y
+# MKR_XENO_CLASSIC is not set
+MKR_XENO_FORGE=y
+# MKR_XENO32 is not set
+MKR_XENO_COBALT=y
+# MKR_XENO_MERCURY is not set
+# MKR_XENO_VALGRIND is not set
+# MKR_XENO_DEBUG_NONE is not set
+MKR_XENO_DEBUG_SYMBOLS=y
+# MKR_XENO_DEBUG_PARTIAL is not set
+# MKR_XENO_DEBUG_FULL is not set
 
 #
 # Components selection
 #
 MKR_XENO_USERSPACE=y
-MKR_XENO_A4L=y
+# MKR_XENO_A4L is not set
 MKR_XENO_NATIVE=y
 MKR_XENO_POSIX=y
-MKR_XENO_PSOS=y
-MKR_XENO_RTCAN=y
+# MKR_XENO_PSOS is not set
+# MKR_XENO_RTCAN is not set
 MKR_XENO_RTDM=y
-MKR_XENO_UITRON=y
-MKR_XENO_VRTX=y
-MKR_XENO_VXWORKS=y
+# MKR_XENO_UITRON is not set
+# MKR_XENO_VRTX is not set
+# MKR_XENO_VXWORKS is not set
 MKR_XENO_TESTSUITE=y
-MKR_XENO_TESTSUITE_UNFREQUENT=y
+# MKR_XENO_TESTSUITE_UNFREQUENT is not set
+MKR_XENO_RTNET_TOOLS=y
+MKR_XENO_DEMOS=y
 
 #
 # Advanced configuration options
@@ -156,36 +198,45 @@ MKR_XENO_X86_TSC=y
 # MKR_XENO_UITRON_MLOCKALL is not set
 MKR_XENO_ATOMIC_BUILTINS=y
 # MKR_XENO_ATOMIC_ADHOC is not set
+# MKR_XENO_FORGE_MONOTONIC_RAW is not set
+# MKR_XENO_FORGE_REGISTRY is not set
+# MKR_XENO_FORGE_LORES_CLOCK is not set
+# MKR_XENO_FORGE_ASSERT is not set
+# MKR_XENO_FORGE_ASYNC_CANCEL is not set
+# MKR_XENO_FORGE_PSHARED is not set
 
 #
-# LTP (old versions)
+# Other
 #
-# MKR_LTP_OLD is not set
 
 #
-# LTP (newer versions)
+# alsa-utils
 #
-MKR_LTP_NEW=y
-MKR_LTP_NEW_SRCDIR=ltp-full-*
+# MKR_ALSA_UTILS is not set
 
 #
-# Real-time tests & benches
+# Bash
 #
-MKR_TESTS=y
-MKR_TESTS_SRCDIR=$(srctree)/tests
-MKR_TESTS_XENO=y
-MKR_XENO_TEST_FRONTEND=y
+MKR_BASH=y
+MKR_BASH_SRCDIR=bash-*
 
 #
-# Dropbear
+# Cryptsetup
 #
-MKR_DROPBEAR=y
-MKR_DROPBEAR_SRCDIR=dropbear-*
-MKR_DROPBEAR_ZLIB=y
+MKR_CRYPTSETUP=y
+MKR_CRYPTSETUP_SRCDIR=cryptsetup-*
+MKR_CRYPTSETUP_LIBUUID=y
 
 #
-# Tools
+# Debootstrap
 #
+# MKR_DEBOOTSTRAP is not set
+
+#
+# Device Mapper
+#
+MKR_DEVICE_MAPPER=y
+MKR_DEVICE_MAPPER_SRCDIR=LVM*
 
 #
 # Dialog
@@ -204,29 +255,29 @@ MKR_DOSFSTOOLS_SRCDIR=dosfstools-*
 #
 MKR_E2FSPROGS=y
 MKR_E2FSPROGS_SRCDIR=e2fsprogs-*
+MKR_E2FSPROGS_LIBUUID=y
+# MKR_E2FSPROGS_LIBBLKID is not set
 
 #
 # File
 #
-MKR_FILE=y
-MKR_FILE_SRCDIR=file-*
-MKR_FILE_ZLIB=y
+# MKR_FILE is not set
 
 #
 # GDB
 #
-MKR_GDB=y
-MKR_GDB_SRCDIR=gdb-*
-MKR_GDB_ZLIB=y
+# MKR_GDB is not set
+
+#
+# Iperf
+#
+MKR_IPERF=y
+MKR_IPERF_SRCDIR=iperf-*
 
 #
 # Kexec-tools
 #
-MKR_KEXEC_TOOLS=y
-MKR_KEXEC_TOOLS_SRCDIR=kexec-tools-*
-MKR_KEXEC_ZLIB=y
-MKR_KEXEC_LZMA=y
-MKR_KEXEC_TOOLS_KDUMP=y
+# MKR_KEXEC_TOOLS is not set
 
 #
 # Make
@@ -234,21 +285,41 @@ MKR_KEXEC_TOOLS_KDUMP=y
 # MKR_MAKE is not set
 
 #
-# Netcat
+# Mdadm
 #
-MKR_NETCAT=y
-MKR_NETCAT_SRCDIR=netcat-*
+MKR_MDADM=y
+MKR_MDADM_SRCDIR=mdadm-*
+
+#
+# msr-tools
+#
+MKR_MSR_TOOLS=y
+MKR_MSR_TOOLS_SRCDIR=msr-tools-*
 
 #
 # Ntfs-3g
 #
-# MKR_NTFS is not set
+MKR_NTFS=y
+# MKR_NTFS32 is not set
+MKR_NTFS_SRCDIR=ntfs-3g_*
+MKR_NTFS_LIBUUID=y
 
 #
-# RTnet
+# Parted
 #
-MKR_RTNET=y
-MKR_RTNET_SRCDIR=rtnet-*
+# MKR_PARTED is not set
+
+#
+# pciutils
+#
+MKR_PCIUTILS=y
+MKR_PCIUTILS_SRCDIR=pciutils-*
+
+#
+# Rpcbind
+#
+MKR_RPCBIND=y
+MKR_RPCBIND_SRCDIR=rpcbind-*
 
 #
 # Strace
@@ -263,18 +334,119 @@ MKR_TCPDUMP=y
 MKR_TCPDUMP_SRCDIR=tcpdump-*
 
 #
+# Usbutils
+#
+MKR_USBUTILS=y
+MKR_USBUTILS_SRCDIR=usbutils-*
+
+#
 # Valgrind
 #
 # MKR_VALGRIND is not set
 
 #
-# Output
+# wireless-tools
 #
-# MKR_OUT_TAR is not set
-# MKR_OUT_NFS is not set
-MKR_OUT_INITRAMFS=y
-# MKR_OUT_INITRAMFS_GZ is not set
-MKR_OUT_INITRAMFS_XZ=y
-MKR_OUT_INITRAMFS_TFTP=y
-MKR_OUT_INITRAMFS_DEST=/var/lib/tftpboot/initrd-modular
-# MKR_SKIP_ROOTFS is not set
+MKR_WIRELESS_TOOLS=y
+MKR_WIRELESS_TOOLS_SRCDIR=wireless_tools.*
+
+#
+# wpa_supplicant
+#
+MKR_WPA_SUPPLICANT=y
+MKR_WPA_SUPPLICANT_SRCDIR=wpa_supplicant-*
+# MKR_WPA_SUPPLICANT_TLS_INTERNAL is not set
+MKR_WPA_SUPPLICANT_TLS_LIBRESSL=y
+MKR_WPA_SUPPLICANT_CONFIG_TLS=openssl
+
+#
+# Libraries
+#
+
+#
+# alsa-lib
+#
+# MKR_ALSA_LIB is not set
+
+#
+# fuse
+#
+MKR_FUSE=y
+# MKR_FUSE32 is not set
+MKR_FUSE_SRCDIR=fuse-*
+
+#
+# libpcap
+#
+MKR_LIBPCAP=y
+MKR_LIBPCAP_SRCDIR=libpcap-*
+
+#
+# libressl
+#
+MKR_LIBRESSL=y
+MKR_LIBRESSL_SRCDIR=libressl-*
+# MKR_LIBRESSL_OPENSSL is not set
+
+#
+# libtirpc
+#
+MKR_LIBTIRPC=y
+MKR_LIBTIRPC_SRCDIR=libtirpc-*
+
+#
+# libtomcrypt
+#
+# MKR_LIBTOMCRYPT is not set
+
+#
+# libtommath
+#
+# MKR_LIBTOMMATH is not set
+
+#
+# libusb
+#
+MKR_LIBUSB=y
+MKR_LIBUSB_SRCDIR=libusb-*
+
+#
+# ncurses
+#
+MKR_NCURSES=y
+MKR_NCURSES_SRCDIR=ncurses-*
+MKR_NCURSES_FULL_TERMINFO=y
+
+#
+# popt
+#
+MKR_POPT=y
+MKR_POPT_SRCDIR=popt-*
+
+#
+# readline
+#
+MKR_READLINE=y
+MKR_READLINE_SRCDIR=readline-*
+
+#
+# util-linux
+#
+MKR_UTIL_LINUX=y
+MKR_UTIL_LINUX_SRCDIR=util-linux-*
+MKR_UTIL_LINUX_LIBUUID=y
+# MKR_UTIL_LINUX_LIBBLKID is not set
+# MKR_UTIL_LINUX_CRAMFS is not set
+
+#
+# xz
+#
+MKR_XZ=y
+MKR_XZ_SRCDIR=xz-*
+MKR_XZ_XZ=y
+
+#
+# zlib-ng
+#
+MKR_ZLIB=y
+MKR_ZLIB_NG_SRCDIR=zlib-ng*
