--- a/grub-efi/grub.cfg
+++ b/grub-efi/grub.cfg
@@ -15,13 +15,23 @@ function load_video {
   fi
 }
 
-if loadfont $prefix/dejavusansmono.pf2 ; then
-  set gfxmode=auto
+if loadfont $prefix/theme/dos.pf2 ; then
+  set gfxmode=640x480
   load_video
   insmod gfxterm
+  insmod png
 fi
 terminal_output gfxterm
 
+if background_image /isolinux/splash.png; then
+  set color_normal=light-gray/black
+  set color_highlight=white/black
+else
+  set menu_color_normal=light-gray/black
+  set menu_color_highlight=black/white
+fi
+
+set theme=$prefix/theme/theme.txt
 menuentry 'Linux and Xenomai cobalt' {
     echo 'Loading Linux ...'
     linux    /linux console=tty1 rdinit=/linuxrc
