--- a/iso-boot/isolinux.cfg
+++ b/iso-boot/isolinux.cfg
@@ -1,8 +1,37 @@
-ui menu.c32
-prompt 0
+ui vesamenu.c32
+
+menu background splash.png
 menu title Boot options
+menu color screen	* #00000000 #00000000 none
+menu color border	* #00000000 #00000000 none
+menu color title	* #ff336799 #00000000 none
+menu color unsel	* #ff336799 #00000000 none
+menu color sel		* #00000000 #ff95adc1 none
+
+menu color tabmsg	* #ff336799 #00000000 none
+menu color cmdline	* #ff336799 #00000000 none
+menu color timeout_msg	* #ff336799 #00000000 none
+menu color timeout	* #ff336799 #00000000 none
+menu msgcolor 		  #ff336799 #00000000 none
+
+menu vshift 1
+menu margin 14
+menu tabmsg Press ENTER to boot or TAB to edit a menu entry
+menu tabmsgrow 21
+menu timeoutrow 24
+
+prompt 0
 timeout 100
 default 0
+
+menu separator
+menu separator
+menu separator
+menu separator
+menu separator
+menu separator
+menu separator
+menu separator
 
 label 0
 	menu label Linux and Xenomai cobalt
