grub-efi: cosmetic changes

--- a/grub-efi/grub.cfg
+++ b/grub-efi/grub.cfg
@@ -15,7 +15,7 @@ function load_video {
   fi
 }
 
-if loadfont $prefix/theme/dos.pf2 ; then
+if loadfont $prefix/theme/font.pf2 ; then
   set gfxmode=640x480
   load_video
   insmod gfxterm
@@ -24,7 +24,7 @@ fi
 terminal_output gfxterm
 
 if background_image /isolinux/splash.png; then
-  set color_normal=light-gray/black
+  set color_normal=blue/white
   set color_highlight=white/black
 else
   set menu_color_normal=light-gray/black
