iso-boot: pick all COM32 files

--- a/iso-boot/Makefile
+++ b/iso-boot/Makefile
@@ -1,4 +1,4 @@
-ISOLINUX_FILES=isolinux.bin vesamenu.c32 ldlinux.c32 libutil.c32
+ISOLINUX_FILES=$(srcdir)/isolinux.bin $(wildcard $(srcdir)/*.c32)
 INSTALL:=install -m 0644 -D
 
 isobootdir := $(staging)/../boot.iso.d
@@ -13,8 +13,8 @@ staging:
 		$(INSTALL) $(pkgdir)/$$f $(isobootdir)/isolinux/$$f; \
 	done
 	for f in $(ISOLINUX_FILES); do \
-		if test -e $(srcdir)/$$f; then \
-			$(INSTALL) $(srcdir)/$$f $(isobootdir)/isolinux/$$f; \
+		if test -e $$f; then \
+			$(INSTALL) $$f $(isobootdir)/isolinux/; \
 		fi; \
 	done
 
