--- a/Kconfig
+++ b/Kconfig
@@ -191,6 +191,7 @@ source "e2fsprogs/Kconfig"
 source "file/Kconfig"
 source "gdb/Kconfig"
 source "iperf/Kconfig"
+source "iptables/Kconfig"
 source "kexec-tools/Kconfig"
 source "make/Kconfig"
 source "mdadm/Kconfig"
@@ -213,6 +214,8 @@ menu "Libraries"
 
 source "alsa-lib/Kconfig"
 source "fuse/Kconfig"
+source "libmnl/Kconfig"
+source "libnftnl/Kconfig"
 source "libpcap/Kconfig"
 source "libressl/Kconfig"
 source "libtirpc/Kconfig"
