--- a/Kconfig
+++ b/Kconfig
@@ -193,6 +193,7 @@ source "gdb/Kconfig"
 source "iperf/Kconfig"
 source "iptables/Kconfig"
 source "iproute2/Kconfig"
+source "ipsec-tools/Kconfig"
 source "kexec-tools/Kconfig"
 source "make/Kconfig"
 source "mdadm/Kconfig"
