--- a/pciutils/Kconfig
+++ b/pciutils/Kconfig
@@ -9,6 +9,10 @@ config PCIUTILS_SRCDIR
        srcdir "Source directory"
        default "pciutils-*"
 
+config PCIUTILS_ZLIB
+       bool "Enable zlib compression"
+       build_select ZLIB
+
 endif
 
 endmenu
