--- a/bash/Makefile
+++ b/bash/Makefile
@@ -10,6 +10,8 @@ rootfs-y += \
 	/bin/bash \
 	/bin/sh
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
