--- a/iperf/Makefile
+++ b/iperf/Makefile
@@ -2,6 +2,8 @@ configure-args-y += ac_cv_func_malloc_0_nonnull=yes
 
 rootfs-y := /usr/bin/iperf
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
