--- a/iptables/Makefile
+++ b/iptables/Makefile
@@ -10,6 +10,8 @@ rootfs-y += \
 	/usr/sbin/iptables* \
 	/usr/sbin/xtables*
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
