--- a/make/Makefile
+++ b/make/Makefile
@@ -1,5 +1,7 @@
 rootfs-y := /usr/bin/make
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
