--- a/readline/Makefile
+++ b/readline/Makefile
@@ -10,6 +10,8 @@ rootfs-y += \
 	/lib/libhistory.so* \
 	/lib/libreadline.so*
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
