--- a/rpcbind/Makefile
+++ b/rpcbind/Makefile
@@ -5,6 +5,8 @@ rootfs-y += \
 	/usr/bin/rpcbind \
 	/usr/bin/rpcinfo
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
