--- a/strace/Makefile
+++ b/strace/Makefile
@@ -1,5 +1,7 @@
 rootfs-y := /usr/bin/strace
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
