--- a/usbutils/Makefile
+++ b/usbutils/Makefile
@@ -6,6 +6,8 @@ rootfs-y += \
 
 cppflags-y += -DWITH_GZFILEOP
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
