--- a/libnftnl/Makefile
+++ b/libnftnl/Makefile
@@ -1,6 +1,8 @@
 rootfs-y += \
 	/usr/lib/libnftnl.so.*
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
