--- a/libpcap/Makefile
+++ b/libpcap/Makefile
@@ -12,6 +12,8 @@ configure-args-y += \
 
 rootfs-y += /usr/lib/libpcap.so.*
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
