--- a/popt/Makefile
+++ b/popt/Makefile
@@ -4,6 +4,8 @@ configure-args-y += \
 rootfs-y := \
 	/usr/lib/libpopt.so.*
 
+$(mkr-configured): $(default-autotools-configured)
+
 compile: default-autotools-compile
 
 staging: default-autotools-staging
